--- a/client/style/components/header.scss
+++ b/client/style/components/header.scss
@@ -37,7 +37,9 @@
     }
     text-transform: uppercase;
     color: white;
-    letter-spacing: 0.05em
+    letter-spacing: 0.05em;
+    text-align: center;
+    
   }
 
 
