[views]footer and header

--- a/client/style/main.scss
+++ b/client/style/main.scss
@@ -9,6 +9,8 @@ body {
 
 //base
 @import 'base/colors';
+@import 'base/placeholders';
 
 //components
 @import 'components/header';
+@import 'components/footer';
