--- a/client/style/components/header.scss
+++ b/client/style/components/header.scss
@@ -1,30 +1,30 @@
-@import 'bourbon';
-
 
 .header {
   height: 450px;
-  background: #ccc;
+  background: url("../assets/header.png") center center;
+  background-size: cover;
 
   .logo {
-    @include size(50px);
-    @include linear-gradient(to top, red, orange);
+    float: left;
+    margin: 10px 0 0 30px;
+    border: white solid 1px;
+    border-radius: 100%;
+    opacity:0.8;
+    @include size(100px);
   }
   
   nav {
+    float: right;
+    margin: 30px 30px 0px 0px;
     a {
-      font: {
-        family: 'Source Sans Pro';
-        weight: 600;
-        size: 16px;
-      }
       display: inline-block;
       margin-left: 20px;
-      color: rgba(0,0,0,0.7);  
-      text-transform: uppercase;
+      color: white;  
       text-decoration: none;
-      
+      @extend %small-bold;
+
       &:hover {
-        color:rgba(0,0,0,1);
+        opacity: 0.8;
       }
     
     }
@@ -40,7 +40,22 @@
     letter-spacing: 0.05em;
     text-align: center;
     
+    span {
+      border : white solid 10px;
+      display: inline-block;
+      padding: 0.2em 0.5em;
+    }
+  clear: both; //clearing floating logo and nav
+  padding-top: 100px;
   }
 
+  .subtitle {
+    text-align: center;
+    @extend %small-bold;
+    color:white;
+    letter-spacing: 0.3em;
+    line-height: 1;
+
+  }
 
 }
