--- a/client/style/components/work.scss
+++ b/client/style/components/work.scss
@@ -73,6 +73,11 @@
 
       .zoom-icon {
         position: relative;
+        opacity: 0.8;
+        &:hover {
+          opacity: 1;
+          cursor:pointer;
+        }
 
         .ion-ios-search {
           color:white;
