--- a/client/style/main.scss
+++ b/client/style/main.scss
@@ -8,17 +8,18 @@ body {
 }
 
 
-
 //base
 @import 'base/colors';
 @import 'base/placeholders';
 @import 'base/spinner';
+@import 'base/bounce';
 
 //components
 @import 'components/header';
 @import 'components/footer';
 @import 'components/about';
 @import 'components/work';
+@import 'components/reference';
 
 
 
