--- a/client/style/main.scss
+++ b/client/style/main.scss
@@ -20,7 +20,8 @@ body {
 @import 'components/about';
 @import 'components/work';
 @import 'components/reference';
-
+@import 'components/contact';
+@import 'components/form';
 
 
 
