--- a/client/style/components/reference.scss
+++ b/client/style/components/reference.scss
@@ -10,7 +10,7 @@
   .ref-unit {
     max-width: 750px;
     margin: 50px auto;
-    height: 300px;
+    //height: 300px;
     position:relative;
     z-index: 1;
     display:none;
@@ -60,6 +60,7 @@
       font-weight: 300;
       margin-top:-10px;
       position:relative;
+      min-height: 300px;
       
       .end {
         z-index:-1;
@@ -164,7 +165,7 @@
       position:relative;
       margin-left:0px;
       left:auto;
-      height:600px;
+      //height:600px;
       
       .ref-face{
         margin-bottom: 20px;
