--- a/client/style/base/spinner.scss
+++ b/client/style/base/spinner.scss
@@ -4,6 +4,7 @@
   border-radius: 50%;
 }
 .loader {
+  display:none;
   color: $accent;
   font-size: 11px;
   text-indent: -99999em;
@@ -24,7 +25,7 @@
 .loader:before {
   width: 5.2em;
   height: 10.2em;
-  background: $bgcolor;
+  background: white;
   border-radius: 10.2em 0 0 10.2em;
   top: -0.1em;
   left: -0.1em;
@@ -36,7 +37,7 @@
 .loader:after {
   width: 5.2em;
   height: 10.2em;
-  background: $bgcolor;
+  background: white;
   border-radius: 0 10.2em 10.2em 0;
   top: -0.1em;
   left: 5.1em;
