--- a/client/style/components/footer.scss
+++ b/client/style/components/footer.scss
@@ -8,11 +8,19 @@
     
     .logo{
       @include size(50px);
-      border-radius: 100%;
       float: left;
       margin-right: 30px;
       margin-bottom: 20px;
-      opacity: 0.5;
+      border: white solid 2px;
+      background: linear-gradient(to left, #1D976C , #93F9B9);
+      border-radius: 50%;
+      i{
+        display:block;
+        color:white;
+        line-height: 50px;
+        text-align:center;
+        font-size:20px;
+      }
     }
   
     .content-wraper {
