--- a/client/style/components/work.scss
+++ b/client/style/components/work.scss
@@ -37,9 +37,8 @@
     overflow:hidden;
 
     background:{
-      image: url("../assets/header.png");
       size: cover;
-      position: center center;
+      position: center bottom;
       repeat: no-repeat;
       }
 
