--- a/client/style/components/footer.scss
+++ b/client/style/components/footer.scss
@@ -1,10 +1,23 @@
 .footer {
    background: url("../assets/header.png") center center;
   background-size: cover;
-  @include clearfix
+  @include clearfix;
+  position:relative;
+  &:before{
+  position: absolute;
+  content:" ";
+  top:0;
+  left:0;
+  width:100%;
+  height:100%;
+  display: block;
+  z-index:0;
+  background-color: rgba(31,159,215,0.3);
+  }
 
   .lockup{
     padding: 50px 30px;
+    position:relative;
     
     .logo{
       @include size(50px);
