--- a/client/style/components/header.scss
+++ b/client/style/components/header.scss
@@ -8,7 +8,19 @@
     attachment: fixed;
     }
   position:relative;
-  padding-bottom:50px;   
+  padding-bottom:50px;
+  &:before{
+  position: absolute;
+  content:" ";
+  top:0;
+  left:0;
+  width:100%;
+  height:100%;
+  display: block;
+  z-index:0;
+  background-color: rgba(31,159,215,0.3);
+  }
+  
   .logo {
     float: left;
     margin: 10px 0 0 30px;
@@ -21,11 +33,13 @@
     position: center;
     repeat:no-repeat;
     }
+    position:relative;
   }
   
   nav {
     float: right;
     padding: 30px 30px 0px 0px;
+    position:relative;
     a {
       display: inline-block;
       margin-left: 20px;
@@ -59,15 +73,14 @@
       h1 {
       font:{
         size:72px;
-        weight:700;
+        weight:900;
       }
-      text-transform: uppercase;
       color: white;
       letter-spacing: 0.05em;
       text-align: center;
       
       span {
-        border : white solid 10px;
+        border : white solid 5px;
         display: inline-block;
         padding: 0.2em 0.5em;
       }
@@ -92,6 +105,7 @@
 
   }
 }
+
 
 @media screen and (max-width: 640px) {
   .header {
