--- a/client/style/components/reference.scss
+++ b/client/style/components/reference.scss
@@ -18,7 +18,7 @@
 
     &.active-ref{
       @include display(flex);
-      //@extend %bounceOut;
+      @extend %bounceOut;
     }
 
     .ref-face {
@@ -61,7 +61,11 @@
       font-weight: 300;
       margin-top:-10px;
       position:relative;
-      min-height: 300px;
+      height: 360px;
+      
+      p{
+        text-align: left;
+      }
       
       .end {
         z-index:-1;
