[bugs] fixed form and ref section styling bugs

--- a/client/style/components/reference.scss
+++ b/client/style/components/reference.scss
@@ -169,7 +169,7 @@
       position:relative;
       margin-left:0px;
       left:auto;
-      //height:600px;
+      min-height:700px;
       
       .ref-face{
         margin-bottom: 20px;
