[logo] transform fromjpeg to svg

--- a/client/style/components/footer.scss
+++ b/client/style/components/footer.scss
@@ -25,9 +25,9 @@
       margin-right: 30px;
       margin-bottom: 20px;
       border: $accent solid 2px;
-      border-radius: 20%;
+      border-radius: 50%;
       background:{
-        image: url("../assets/logo.jpg");
+        image: url("../assets/logo.svg");
         size: contain;
         position: center;
         repeat:no-repeat;
